updated link to OK and minor CSS work

--- a/main.html
+++ b/main.html
@@ -25,10 +25,8 @@
                 </div>
                 <!-- Links -->
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="about.html" class="nav-link">About</a>
-                    <a href="tags.html" class="nav-link">Tags</a>
-                    <a href="recipes.html" class="nav-link">Recipes</a>
+                    <a href="main.html" class="nav-link">Home</a>
+                    <a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Recipes</a>
                     <div class="nav-link contact-link">
                         <a href="contact.html" class="btn">Contact</a>
                     </div>
@@ -40,8 +38,11 @@
             <header class="hero">
                 <div class="hero-container">
                     <div class="hero-text">
-                        <h1>Octopode's Kitchen</h1>
+                        <h1><a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Octopode's Kitchen</a></h1>
                         <h4>Just Good Food</h4>
+                        <p>
+                            Welcome to my kitchen, your go-to destination for no-nonsense, straight-to-the-point recipes that focus solely on the joy of cooking and the pleasure of indulging in delicious meals. Here, we cut through the clutter and skip the stories, ads, and unnecessary fluff, delivering only what you came for exceptional recipes that speak for themselves.
+                        </p>
                     </div>
                 </div>
             </header>
