changed main.html to index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <!-- Links -->
                 <div class="nav-links">
-                    <a href="main.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                     <a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Recipes</a>
                     <div class="nav-link contact-link">
                         <a href="contact.html" class="btn">Contact</a>
