Added Inkspired link, corrected footer

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </div>
                 <!-- Links -->
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Recipes</a>
+                    <a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Octopode's Kitchen | A Recipe Blog</a>
+                    <a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Inkspired | Photo Gallery </a>
                     <div class="nav-link contact-link">
                         <a href="contact.html" class="btn">Contact</a>
                     </div>
@@ -39,9 +39,18 @@
                 <div class="hero-container">
                     <div class="hero-text">
                         <h1><a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Octopode's Kitchen</a></h1>
-                        <h4>Just Good Food</h4>
+                        <h4>A Recipe Blog</h4>
                         <p>
                             Welcome to my kitchen, your go-to destination for no-nonsense, straight-to-the-point recipes that focus solely on the joy of cooking and the pleasure of indulging in delicious meals. Here, we cut through the clutter and skip the stories, ads, and unnecessary fluff, delivering only what you came for exceptional recipes that speak for themselves.
+                        </p>
+                    </div>
+                </div>
+                <div class="hero-container">
+                    <div class="hero-text">
+                        <h1><a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Inkspired</a></h1>
+                        <h4>Photo Gallery</h4>
+                        <p>
+                            Inkspired is a vibrant gallery of AI-generated art, showcasing a diverse collection of creative and imaginative pieces. Discover unique artwork born from the fusion of technology and artistic inspiration.
                         </p>
                     </div>
                 </div>
@@ -51,7 +60,7 @@
             </section>
         </main>
         <footer class="page-footer">
-            <p>&copy; <span id="date">YEAR</span><span class="footer-logo">Octpode's Press</span></p>
+            <p>&copy; <span id="date">YEAR</span><span class="footer-logo"> Octpode's Press</span></p>
             <p>Built by Andrew Ramos</p>
         </footer>
        
