added imgs to hero-containers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <!-- Links -->
                 <div class="nav-links">
                     <a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Octopode's Kitchen | A Recipe Blog</a>
-                    <a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Inkspired | Photo Gallery </a>
+                    <a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Inkspired Images | Photo Gallery </a>
                     <div class="nav-link contact-link">
                         <a href="contact.html" class="btn">Contact</a>
                     </div>
@@ -35,7 +35,10 @@
         </nav>
         <!-- Blog intro-->
         <main class="page">
-            <header class="hero">
+            <section>
+                <div class="thankyoutext">
+                    <p>Thank you for taking the time to explore my portfolio. This collection showcases a variety of websites I’ve built, reflecting my skills and passion for web development. I’m excited to share my work and demonstrate the expertise I bring to every project.</p>
+                </div>
                 <div class="hero-container">
                     <div class="hero-text">
                         <h1><a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Octopode's Kitchen</a></h1>
@@ -44,18 +47,22 @@
                             Welcome to my kitchen, your go-to destination for no-nonsense, straight-to-the-point recipes that focus solely on the joy of cooking and the pleasure of indulging in delicious meals. Here, we cut through the clutter and skip the stories, ads, and unnecessary fluff, delivering only what you came for exceptional recipes that speak for themselves.
                         </p>
                     </div>
+                    <div class="hero-screenshot">
+                        <img src="img/OctoKitchen_ss.png">
+                    </div>
                 </div>
                 <div class="hero-container">
                     <div class="hero-text">
-                        <h1><a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Inkspired</a></h1>
+                        <h1><a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Inkspired Images</a></h1>
                         <h4>Photo Gallery</h4>
                         <p>
                             Inkspired is a vibrant gallery of AI-generated art, showcasing a diverse collection of creative and imaginative pieces. Discover unique artwork born from the fusion of technology and artistic inspiration.
                         </p>
                     </div>
+                    <div class="hero-screenshot">
+                        <img src="img/Inkspired_ss.png">
+                    </div>
                 </div>
-            </header>
-            <section>
 
             </section>
         </main>
