updated images to 190x190 pngs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </p>
                     </div>
                     <div class="hero-screenshot">
-                        <img src="img/OctoKitchen_ss.png">
+                        <img src="img/OctoKitchen_190x190.png">
                     </div>
                 </div>
                 <div class="hero-container">
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                     <div class="hero-screenshot">
-                        <img src="img/Inkspired_ss.png">
+                        <img src="img/Inkspired_190x190.png">
                     </div>
                 </div>
 
