changed img names

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/style.css" />
-        <link rel="icon" type="image/png" sizes="64x64" href="img/OP-icon.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="img/op-icon.png">
         <title>Octopode's Press | Home</title>
     </head>
     <body>
@@ -16,7 +16,7 @@
                 <!-- Header -->
                 <div class="nav-header">
                     <a href="index.html" class="nav-logo">
-                        <img src="img/OP-logo.png" alt="Octopode's Press">
+                        <img src="img/op-logo.png" alt="Octopode's Press">
                     </a>
                     <h1>Octopode's Press</h1>
                     <button type="button" class="btn nav-btn">
@@ -46,7 +46,7 @@
                         </p>
                     </div>
                     <div class="hero-screenshot">
-                        <img src="img/OctoKitchen_190x190.png">
+                        <img src="img/octokitchen_190x190.png">
                     </div>
                 </div>
                 <div class="hero-container">
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                     <div class="hero-screenshot">
-                        <img src="img/Inkspired_190x190.png">
+                        <img src="img/inkspired_190x190.png">
                     </div>
                 </div>
 
