update images again

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </p>
                     </div>
                     <div class="hero-screenshot">
-                        <img src="img/octokitchen_190x190.png">
+                        <img src="img/octokitchen_190.png">
                     </div>
                 </div>
                 <div class="hero-container">
@@ -58,7 +58,7 @@
                         </p>
                     </div>
                     <div class="hero-screenshot">
-                        <img src="img/inkspired_190x190.png">
+                        <img src="img/inkspired_190.png">
                     </div>
                 </div>
 
