Added the bread calculator

--- a/index.html
+++ b/index.html
@@ -51,6 +51,18 @@
                 </div>
                 <div class="hero-container">
                     <div class="hero-text">
+                        <h1><a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Octopode's Bread Calculator</a></h1>
+                        <h4>Sourdough Recipe Calculator</h4>
+                        <p>
+                            Do you have a sourdough starter that you just fed, and now have a random weight of starter to bake with? Recipes ask for a set amount, what if you have more or less? Forget strict recipes. Come enter the size of the finished dough ball you need, how much starter you have to use, and your prefered hydration percentage, and boom; the amount of  flour, water and salt you need to add to that specific amount of starter you have to make that perfect loaf is automatically calculated for you.
+                        </p>
+                    </div>
+                    <div class="hero-screenshot">
+                        <img src="img/breadcalc_190.png">
+                    </div>
+                </div>
+                <div class="hero-container">
+                    <div class="hero-text">
                         <h1><a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Inkspired Images</a></h1>
                         <h4>Photo Gallery</h4>
                         <p>
