added bread calc to dropdown menu and fixed links

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <!-- Links -->
                 <div class="nav-links">
                     <a href="https://kitchen.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Octopode's Kitchen | A Recipe Blog</a>
+                    <a href="https://breadcalculator.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Octopode's Bread Calculator | Sourdough Recipe Maker </a>
                     <a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer" class="nav-link">Inkspired Images | Photo Gallery </a>
                     
                 </div>
@@ -51,7 +52,7 @@
                 </div>
                 <div class="hero-container">
                     <div class="hero-text">
-                        <h1><a href="https://inkspired.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Octopode's Bread Calculator</a></h1>
+                        <h1><a href="https://breadcalculator.octopodes-press.com/"  target="_blank" rel="noopener noreferrer">Octopode's Bread Calculator</a></h1>
                         <h4>Sourdough Recipe Calculator</h4>
                         <p>
                             Do you have a sourdough starter that you just fed, and now have a random weight of starter to bake with? Recipes ask for a set amount, what if you have more or less? Forget strict recipes. Come enter the size of the finished dough ball you need, how much starter you have to use, and your prefered hydration percentage, and boom; the amount of  flour, water and salt you need to add to that specific amount of starter you have to make that perfect loaf is automatically calculated for you.
